styles/styles.css
/* ... */
p{margin:0;}
cite {font-style:normal;}
fieldset{border-width:0; padding:0; margin:0;}

/* --- Typography ---*/

html{ 
    font-size: 1px;/*for using REM units*/
    scroll-behavior: smooth;
}
body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    font-size: 15rem;
    font-weight: 400;
    line-height: 1.5;
}

body{
    font-family: 'Montserrat', sans-serif;
}

/* --- Main Styles --- */

h1, h2, h3 {
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;

}

.section {
    display: flex;
    justify-content: center;
    padding: 100px 170px;
}


@media screen and (max-width:1280px) {
	.section {
		padding: 100px;
	}
}

@media screen and (max-width:1024px) {
	.section {
		padding: 50px;
	}
}

@media screen and (max-width:768px) {
	.section {
		display: block;
	}
}

@media screen and (max-width:480px) {
	.section {
		padding: 50px 35px;
	}
}



.section-title {
	flex-shrink: 0;
	color: #BA3F1D;
	text-transform: uppercase;
	text-align: left;
	font-weight: 700;
    letter-spacing: 3px;
    font-size: 1.8em;
    margin-block-end: 1em;
}


@media screen and (max-width: 768px) {
    .section-title {
        width: auto;
    }
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.row-item {
    flex: 1 1 100px;
}

.row-item + .row-item {
    margin-left: 5%;
}

.row-item p {
    margin-top: 0px;
    margin-bottom: 25px;
}

/* --- Utilities --- */
a {
    -webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	text-decoration: none;
	font-weight: 700;
	color: inherit
}

strong {
    font-weight: 700;
}

.emoji {
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
}

.emoji.emoji-shake {
    animation-name: shake;
    animation-duration: 1.25s;
    animation-fill-mode: both;
}

@keyframes shake {
    from {
        transform: none;
    }

    15% {
        transform: translate3d(-20%,0,0) rotate3d(0,0,1,-10deg)
	}

	30% {
		transform: translate3d(10%,0,0) rotate3d(0,0,1,7deg)
	}

	45% {
		transform: translate3d(-15%,0,0) rotate3d(0,0,1,-10deg)
	}

	60% {
		transform: translate3d(10%,0,0) rotate3d(0,0,1,5deg)
	}

	75% {
		transform: translate3d(-5%,0,0) rotate3d(0,0,1,-2deg)
	}

	to {
		transform: none
	}
}

.button {
    display: inline-block;
    border: 1px solid #BA3F1D;
    padding: 0.75em 1em;
    border-radius: 0.33333em;
    text-decoration: none;
    color: #BA3F1D;
    
}

.button:hover {
    text-decoration:none;
    border:1px solid #F05D5E;
    color: #F05D5E;
    background-color: #E6EEF0;
}

.highlight-link {
    position: relative;
    display: inline-block;
    z-index: 2;
    text-decoration: none;
    -webkit-box-shadow: inset 0 -3px 0 #BA3F1D;
    box-shadow: inset 0px 0px 0 #BA3F1D;
}

.highlight-link:focus,.highlight-link:hover {
    -webkit-transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    box-shadow: inset 165px 0 0 #BA3F1D;
    color: #edf2f4;
}

.external-link {
    -webkit-transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    font-weight: 700;
    
    background-color: transparent;
    white-space: nowrap;
}

.external-link::after {
    -webkit-transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    transition: all .2s cubic-bezier(0.42, 0, 0, 0.98);
    position: relative;
    bottom: 2px;
    margin-left: 15px;
    content: '';
    background: url(../img/icons/external-link.svg) no-repeat center;
    background-size: 100%;
    width: 20px;
    height: 20px;
    display: inline-block;
    vertical-align: middle;
}

.external-link:focus:after, .external-link:hover:after {
	margin-left: 15px;
	-webkit-transform: translateX(5px);
	transform: translateX(5px)
}

#resume-link {
    display: inline-block;
    font-size: 1.2em;
}

#resume-link::after {
    width: 25px;
    height: 25px;
}

/* Animated link on hover utility */
.section .underline-link {
	position: relative;
    display: inline-block;
    z-index: 2;
}

.section .underline-link:after {
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
	height: 1px;
	background: #36363c;
	content: '';
	opacity: 0;
	-webkit-transition: height .3s,opacity .3s,-webkit-transform .3s;
	transition: height .3s,opacity .3s,-webkit-transform .3s;
	transition: height .3s,opacity .3s,transform .3s;
	transition: height .3s,opacity .3s,transform .3s,-webkit-transform .3s;
	-webkit-transform: translateY(-5px);
	transform: translateY(-5px);
}

.section .underline-link:focus:after,.section .underline-link:hover:after {
	height: 2px;
	border-radius: 3px;
	opacity: 1;
	-webkit-transform: translateY(-2px);
	transform: translateY(-2px)
}

/* classes to hide/show elements for fade effects. */
.hide {
    opacity: 0;
    transition: opacity 800ms;
}

.show {
    opacity: 1;
    transition: opacity 800ms;
}

.hidden {
    display: none;
}

/* button that sends user to top.*/
#top-button {
	-webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	background: 0 0;
	border: none;
	outline: 0;
	width: 35px;
	position: fixed;
	bottom: 35px;
	right: 25px;
	cursor: pointer;
}

@media screen and (max-width:1024px) {
	#top-button {
		bottom: 20px;
		right: 15px;
		width: 25px
	}
}

@media screen and (max-width:480px) {
	#top-button {
		bottom: 15px;
		right: 10px
	}
}

#top-button:focus,#top-button:hover {
	-webkit-transform: translateY(-10px);
	transform: translateY(-10px)
}

#top-button img {
	width: 100%
}
/* --- Navigation --- */

/*.nav-container {
    width: 100%;
    height: 60px;
    position: fixed;
    background-color: #edf2f4;
    z-index: 3;
}*/

nav {
    padding: 10px;
}

nav ul {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    padding-inline-start: 40px;
    float: right;
    margin-right: 50px;
}
/* ... */

